chore: prevent mobile view and error page

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1,2 +1,12 @@
 @import 'tailwindcss';
 @import '@nuxt/ui';
+
+@theme {
+  --font-sans: Inter, system-ui, sans-serif;
+}
+
+@layer base {
+  html {
+    font-family: var(--font-sans);
+  }
+}
